# rules_derivita_ts

./: .gitignore  MODULE.bazel  README.md  WORKSPACE.bzlmod  go.mod  go.sum  package.json
examples/closure_test/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod
examples/closure_test/src/: BUILD.bazel  main.js
examples/closure_test/src/app/: BUILD.bazel  main.js  test.sh
examples/closure_test/src/default_pkg/: BUILD.bazel  util.js
examples/closure_test/src/generated_test/: BUILD.bazel  normal_importer.js  test.sh
examples/closure_test/src/lib/: BUILD.bazel  greeter.js  logger.js
examples/ts/: BUILD  MODULE.bazel  WORKSPACE.bzlmod  package.json  test.ts
js/: index.bzl
js/private/: js_binary.bzl  js_library.bzl  providers.bzl
js/toolchain/: BUILD.bazel  toolchain.bzl
rules_typescript/: BUILD.bazel  README.derivita  README.md  index.bzl  index.docs.bzl  index.ts  package.json  replacements.bzl  tsconfig.json
rules_typescript/devserver/: BUILD.bazel  concatjs_devserver.bzl  launcher_template.sh  main.go  runfile-filesystem.go
rules_typescript/devserver/concatjs/: BUILD.bazel
rules_typescript/devserver/devserver/: BUILD.bazel  devserver.go
rules_typescript/devserver/runfiles/: BUILD.bazel
rules_typescript/internal/: BUILD.bazel  build_defs.bzl  tsconfig.json
rules_typescript/internal/common/: compilation.bzl  module_mappings.bzl  tsconfig.bzl
rules_typescript/internal/tsc_wrapped/: compiler_host.ts  manifest.ts  package.json  plugin_api.ts  tsc_wrapped.ts  tsc_wrapped_test.ts  worker.ts
rules_typescript/internal/tsetse/: copy.bara.sky  language_service_plugin.ts  runner.ts
rules_typescript/internal/tsetse/rules/: ban_expect_truthy_promise_rule.ts  ban_mutable_exports_rule.ts  ban_promise_as_condition_rule.ts  ban_string_initialized_sets_rule.ts  check_return_value_rule.ts  conformance_pattern_rule_test.ts  equals_nan_rule.ts  must_use_promises_rule.ts  property_renaming_safe.ts
rules_typescript/internal/tsetse/tests/ban_expect_truthy_promise/: BUILD
rules_typescript/internal/tsetse/tests/ban_promise_as_condition/: BUILD
rules_typescript/internal/tsetse/tests/check_return_value/: BUILD
rules_typescript/internal/tsetse/tests/equals_nan/: BUILD
rules_typescript/internal/tsetse/tests/must_use_promises/: BUILD
rules_typescript/internal/tsetse/tsec/: configured_checker.ts  derivita_config.ts  exemption_config.ts  rule_configuration.ts  rule_groups.ts
rules_typescript/internal/tsetse/tsec/rules/dom_security/: ban_base_href_assignments.ts  ban_document_execcommand.ts  ban_document_write_calls.ts  ban_document_writeln_calls.ts  ban_domparser_parsefromstring.ts  ban_element_innerhtml_assignments.ts  ban_element_insertadjacenthtml.ts  ban_element_outerhtml_assignments.ts  ban_element_setattribute.ts  ban_eval_calls.ts  ban_function_calls.ts  ban_iframe_srcdoc_assignments.ts  ban_object_data_assignments.ts  ban_range_createcontextualfragment.ts  ban_script_appendchild_calls.ts  ban_script_content_assignments.ts  ban_script_src_assignments.ts  ban_serviceworkercontainer_register.ts  ban_shared_worker_calls.ts  ban_trustedtypes_createpolicy.ts  ban_window_stringfunctiondef.ts  ban_worker_calls.ts  ban_worker_importscripts.ts
rules_typescript/internal/tsetse/tsec/rules/unsafe/: ban_legacy_conversions.ts  ban_reviewed_conversions.ts
rules_typescript/internal/tsetse/util/: absolute_matcher_test.ts  allowlist_test.ts  fixer_test.ts
rules_typescript/internal/tsetse/util/pattern_engines/: name_engine_test.ts
rules_typescript/internal/tsetse/util/testing/: test_support.ts
rules_typescript/test/absolute_imports/: BUILD.bazel
rules_typescript/test/errorchecks/: BUILD.bazel
rules_typescript/test/foobar/: foo.ts
rules_typescript/test/generated_ts/: BUILD.bazel
rules_typescript/test/googmodule/: BUILD.bazel
rules_typescript/test/some_library/: BUILD.bazel
rules_typescript/test/some_module/: run_node_test.bzl
rules_typescript/test/strict_deps/: BUILD
rules_typescript/test/target_module_attributes/: BUILD.bazel
rules_typescript/test/ts_library_esm_with_jest/: BUILD.bazel  ts_jest_test.bzl
rules_typescript/test/tsconfig_extends/: BUILD.bazel
tools/closure_compiler/: BUILD
tools/workspace_name/: workspace_name_helper.bzl
tsickle/: BUILD  package-lock.json  tslint.json
tsickle/demo/: package-lock.json
tsickle/src/: module_type_translator.ts
tsickle/test/: BUILD  decorator_downlevel_transformer_test.ts  e2e_closure_test.ts  export_star_transformer_test.ts  fix_downleveled_decorators_test.ts  golden_tsickle_test.ts  googmodule_test.ts  jsdoc_test.ts  test_support.ts  tsconfig.json  tsickle_test.ts  type_translator_test.ts
tsickle/test_files/: BUILD
tsickle/test_files/ts_migration_exports_shim.no_externs/: correct_default_shorthand.tsmes.js  correct_default_type.tsmes.js  correct_default_type_literal.tsmes.js  correct_default_value.tsmes.js  correct_default_with_re_export.tsmes.js  correct_named.tsmes.js  correct_named_shorthand.tsmes.js  pintomodule.tsmes.js
tsickle/test_files/ts_migration_exports_shim.no_externs.puretransform.declaration/: correct_default_type.tsmes.d.ts  correct_default_type_shorthand.tsmes.d.ts  correct_default_value.tsmes.d.ts  correct_default_value_shorthand.tsmes.d.ts  correct_named.tsmes.d.ts  correct_named_shorthand.tsmes.d.ts
tsickle/test_files/use_closure_externs/: use_closure_externs_decl.d.ts
