"""
Bazel module providing TypeScript rules and tooling for Derivita projects.
This module contains custom TypeScript build rules, toolchains, and utilities
to support TypeScript development within the Derivita ecosystem.
"""

module(name = "rules_derivita_ts", version = "0.0.1")

bazel_dep(name = "rules_nodejs", version = "5.8.5")
bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "rules_go", version = "0.51.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.38.0", repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_proto", version = "7.0.2")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_rules_go"
)

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")
http_jar(
    name = "closure_compiler_jar",
    url = "https://repo1.maven.org/maven2/com/google/javascript/closure-compiler/v20231112/closure-compiler-v20231112.jar",
    sha256 = "a07d7f4195fc705f6c66290fe57a4d75fb0c7a926b816fae5f43861e12556e6c",
)
