load("//third_party/rules_typescript:index.bzl", "ts_library")

ts_library(
    name = "override",
    srcs = ["a.ts"],
    devmode_module = "amd",
    devmode_target = "es5",
    prodmode_module = "amd",
    prodmode_target = "es5",
    tsconfig = ":tsconfig-override.json",
)

# jasmine_node_test(
#     name = "override_output_test",
#     srcs = ["override_output_test.js"],
#     data = [
#         ":override_devmode_output",
#         ":override_prodmode_output",
#     ],
# )
