load("@rules_derivita_ts//js:index.bzl", "js_library")

js_library(
    name = "greeter",
    srcs = ["greeter.js"],
    module_name = "test.lib.greeter",
    visibility = [
        "//src/app:__pkg__",
        "//src/generated_test:__pkg__",
    ],
)

js_library(
    name = "logger",
    srcs = ["logger.js"],
    module_name = "test.lib.logger",
    visibility = [
        "//src/app:__pkg__",
        "//src/generated_test:__pkg__",
    ],
)
